--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "watch-sass": "node-sass src/sass/main.scss src/css/style.css -w",
     "dev": "npm-run-all --parallel dev-serv watch-sass",
     "compile-sass": "node-sass src/sass/main.scss src/css/style.comp.css",
-    "concat-css": "concat -o src/css/style.concat.css src/css/icon-font.css src/css/style.comp.css",
-    "prefix-css": "postcss --use autoprefixer -b \"last 10 versions\" src/css/style.concat.css -o src/css/style.prefix.css",
+    "prefix-css": "postcss --use autoprefixer -b \"last 10 versions\" src/css/style.comp.css -o src/css/style.prefix.css",
     "compress-css": "node-sass src/css/style.prefix.css src/css/style.css --output-style compressed",
-    "build-css": "npm-run-all compile-sass concat-css prefix-css compress-css",
+    "build-css": "npm-run-all compile-sass prefix-css compress-css",
     "dev-serv": "parcel src/index.html",
-    "live-serv": "live-server dist",
+    "live-serv": "live-server dist --browser=firefox",
     "build": "parcel build src/index.html",
     "start": "npm-run-all build-css build live-serv"
   },
